MDEV-8015 InnoDB: Failing assertion: new_state->key_version != ENCRYPTION_KEY_VERSION_INVALID

InnoDB: refuse to start if encryption is requested but no
encryption plugin is available